@@ -5,6 +5,7 @@ processID/convertID/... eindeutig berechnen ... müsste so funktionieren
 
 ### Prio 2 ###
 
+save last options as user profile
 use qt animations
 cdtext
 optimize profiles
